@@ -1,18 +1,18 @@
 package nonprofitbookkeeping.reports.datasource;
 
+import nonprofitbookkeeping.model.AccountSide;
+import nonprofitbookkeeping.model.AccountingTransaction;
+
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.LinkedHashSet;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
 
-import nonprofitbookkeeping.model.AccountSide;
-import nonprofitbookkeeping.model.AccountingTransaction;
-
 /**
- * Criteria for querying ledger transactions.
+ * Criteria for filtering accounting transactions.
  */
 public class LedgerQueryCriteria
 {
@@ -29,61 +29,54 @@ public class LedgerQueryCriteria
 		this.startDate = builder.startDate;
 		this.endDate = builder.endDate;
 		this.memoContains = builder.memoContains;
-		this.accountNumbers = Collections
-			.unmodifiableSet(new LinkedHashSet<>(builder.accountNumbers));
+		this.accountNumbers = builder.accountNumbers == null ?
+			Collections.emptySet() :
+			Collections.unmodifiableSet(new HashSet<>(builder.accountNumbers));
 		this.requireAllAccounts = builder.requireAllAccounts;
 		this.transactionSide = builder.transactionSide;
-		this.predicates = builder.predicates == null ? List.of() :
+		this.predicates = builder.predicates == null ?
+			Collections.emptyList() :
 			Collections.unmodifiableList(new ArrayList<>(builder.predicates));
-		
-	}
-	
-	public LocalDate getStartDate()
-	{
-		return this.startDate;
-		
-	}
-	
-	public LocalDate getEndDate()
-	{
-		return this.endDate;
-		
-	}
-	
-	public String getMemoContains()
-	{
-		return this.memoContains;
-		
-	}
-	
-	public Set<String> getAccountNumbers()
-	{
-		return this.accountNumbers;
-		
-	}
-	
-	public boolean isRequireAllAccounts()
-	{
-		return this.requireAllAccounts;
-		
-	}
-	
-	public AccountSide getTransactionSide()
-	{
-		return this.transactionSide;
-		
-	}
-	
-	public List<Predicate<AccountingTransaction>> getPredicates()
-	{
-		return this.predicates;
-		
 	}
 	
 	public static Builder builder()
 	{
 		return new Builder();
-		
+	}
+	
+	public LocalDate getStartDate()
+	{
+		return this.startDate;
+	}
+	
+	public LocalDate getEndDate()
+	{
+		return this.endDate;
+	}
+	
+	public String getMemoContains()
+	{
+		return this.memoContains;
+	}
+	
+	public Set<String> getAccountNumbers()
+	{
+		return this.accountNumbers;
+	}
+	
+	public boolean isRequireAllAccounts()
+	{
+		return this.requireAllAccounts;
+	}
+	
+	public AccountSide getTransactionSide()
+	{
+		return this.transactionSide;
+	}
+	
+	public List<Predicate<AccountingTransaction>> getPredicates()
+	{
+		return this.predicates;
 	}
 	
 	public static final class Builder
@@ -91,7 +84,7 @@ public class LedgerQueryCriteria
 		private LocalDate startDate;
 		private LocalDate endDate;
 		private String memoContains;
-		private final Set<String> accountNumbers = new LinkedHashSet<>();
+		private Set<String> accountNumbers;
 		private boolean requireAllAccounts;
 		private AccountSide transactionSide;
 		private List<Predicate<AccountingTransaction>> predicates;
@@ -100,51 +93,50 @@ public class LedgerQueryCriteria
 		{
 			this.startDate = startDate;
 			return this;
-			
 		}
 		
 		public Builder endDate(LocalDate endDate)
 		{
 			this.endDate = endDate;
 			return this;
-			
 		}
 		
 		public Builder memoContains(String memoContains)
 		{
 			this.memoContains = memoContains;
 			return this;
-			
 		}
 		
 		public Builder addAccountNumber(String accountNumber)
 		{
 			
-			if (accountNumber != null && !accountNumber.isBlank())
+			if (accountNumber == null || accountNumber.isBlank())
 			{
-				this.accountNumbers.add(accountNumber.trim());
+				return this;
 			}
 			
-			return this;
+			if (this.accountNumbers == null)
+			{
+				this.accountNumbers = new HashSet<>();
+			}
 			
+			this.accountNumbers.add(accountNumber);
+			return this;
 		}
 		
 		public Builder requireAllAccounts(boolean requireAllAccounts)
 		{
 			this.requireAllAccounts = requireAllAccounts;
 			return this;
-			
 		}
 		
 		public Builder transactionSide(AccountSide transactionSide)
 		{
 			this.transactionSide = transactionSide;
 			return this;
-			
 		}
 		
-		public Builder addPredicate(
-			Predicate<AccountingTransaction> predicate)
+		public Builder addPredicate(Predicate<AccountingTransaction> predicate)
 		{
 			
 			if (predicate == null)
@@ -159,14 +151,11 @@ public class LedgerQueryCriteria
 			
 			this.predicates.add(predicate);
 			return this;
-			
 		}
 		
 		public LedgerQueryCriteria build()
 		{
 			return new LedgerQueryCriteria(this);
-			
 		}
-		
 	}
 }
